# EKF-cpp-ROS

./: .gitignore  2begin.yaml  Readme.txt  covariance.txt  odom.txt  states.txt
Presentation 1/: Extended Kalman Filter.pptx  Presentation 1 (1).pptx  Presentation 1.pptx  SA- First Part.pptx
Presentation 2/: Presentation 2_ohne Vid.pptx
Presentation 3/: Presentation 3.pptx
Presentation 4/: Packages.docx  Presentation 4.pptx  Presentation 4.pptx.pptx  ray.m  raycast.m
Presentation 5/: Presentation 5.pptx
Report/: Report.aux  Report.blg  Report.fdb_latexmk  Report.fls  Report.out  Report.tex
Report/chapters/: 0_Abstract.tex  1_Introduction.tex  2_Methods.tex  3_Implementation.tex  4_Results.tex  5_Conclusion.tex  6_Appendices.tex  7_Acknowledgment.tex  8_References.tex
Report/figures/: ekf_odom.tikz
Report/matlab/: Data.txt  data10.mat  data72.mat  data_matlab.m  data_safe.m  ekf_odom.tikz  ellipse.m  error_ellipse.m  odom.txt  odom_ekf.mat  plotter.m
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/pcl_ros/: MLSConfig.h
devel/include/rosaria/: BumperState.h
devel/include/tf/: FrameGraphRequest.h  (+2 more)
src/ekf/: AlmostPerfectMap.yaml  CMakeLists.txt  elevadores.yaml  frames.gv  package.xml  run_real_pioneer_with_preLoadedMap
src/ekf/include/Eigen/: Makefile  cmake_install.cmake
src/ekf/src/: ekf.cpp
src/ekf_implementation/: CMakeLists.txt  package.xml
src/moded_map_server/: CMakeLists.txt  package.xml
src/nav_bundle/: CMakeLists.txt
src/pioneer_gazebo_ros/: SmallFirstRoom.pgm  SmallFirstRoom.yaml  gazebo5FloorMap.yaml  run_pioneer_gazebo_preLoadedMap
src/teleop_twist_keyboard_rosaria/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
(+63 files in other folders)
